log/build_2024-02-15_02-15-08/mypkg/stderr.log
  File "/home/yamashita/car_ws/install/mypkg/lib/python3.10/site-packages/mypkg/receiver.py", line 50
    np.sqrt(abs(distance**2-distance_xy**2)))
                                            ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 47

